--- a/index.html
+++ b/index.html
@@ -69,22 +69,21 @@
 <!--Bios-->
   <div class="spacer"></div>
   <h1 class="aboutUs"> About Us</h1>
-  <div class="container">
-    <div class="row">
-      <div class="col bioImg">
-        <img src="ASSETS/bio.jpg" style="width:100%; height:auto">
+  <div class="card-deck">
+    <div class="card">
+      <img src="./ASSETS/bio.jpg" class="card-img-top" alt="bio">
+      <div class="card-body">
+        <h5 class="Addison Jersey">Card title</h5>
+        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Est risus rhoncus scelerisque eleifend donec. Magna euismod mollis tellus quam nisi a turpis nisl, fermentum.</p>
       </div>
-    <div class="col profile">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Est risus rhoncus scelerisque eleifend donec. Magna euismod mollis tellus quam nisi a turpis nisl, fermentum.
     </div>
-    <div class="col bioImg">
-      <img src="ASSETS/bio2.jpg" style="width:100%;height: auto;">
+    <div class="card">
+      <img src="/HW21/ASSETS/bio2.jpg" class="card-img-top" alt="bio2">
+      <div class="card-body">
+        <h5 class="card-title">Anita Broughton</h5>
+        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Est risus rhoncus scelerisque eleifend donec. Magna euismod mollis tellus quam nisi a turpis nisl, fermentum.</p>
+      </div>
     </div>
-    <div class="col profile">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Est risus rhoncus scelerisque eleifend donec. Magna euismod mollis tellus quam nisi a turpis nisl, fermentum.
-    </div>
-  </div>
-  </div>
 </div>
 <!--CTA-->
 <div class="spacer"></div>
